--- a/docs/api-reference/CRMScript.NetServer.NSDayInformationListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDayInformationListItem.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSDayInformationListItem
   fullName: CRMScript.NetServer.NSDayInformationListItem
   type: Class
-  summary: 
+  summary: "\nSummary information about the activities and holidays for one day.\n"
   example: 
 - uid: CRMScript.NetServer.NSDayInformationListItem.#ctor
   commentId: M:CRMScript.NetServer.NSDayInformationListItem.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSDayInformationListItem.#ctor
   fullName: CRMScript.NetServer.NSDayInformationListItem.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSDayInformationListItem class.\n"
   remarks: 
   syntax: 
     content: NSDayInformationListItem
