--- a/docs/api-reference/CRMScript.NetServer.NSDeliveryTerm.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDeliveryTerm.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSDeliveryTerm
   fullName: CRMScript.NetServer.NSDeliveryTerm
   type: Class
-  summary: 
+  summary: "\nThe built-in delivery terms list. Used by the SuperOffice Quote Connector in quote versions.\n"
   example: 
 - uid: CRMScript.NetServer.NSDeliveryTerm.#ctor
   commentId: M:CRMScript.NetServer.NSDeliveryTerm.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSDeliveryTerm.#ctor
   fullName: CRMScript.NetServer.NSDeliveryTerm.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSDeliveryTerm class.\n"
   remarks: 
   syntax: 
     content: NSDeliveryTerm
