--- a/docs/api-reference/CRMScript.NetServer.NSDeliveryType.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDeliveryType.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSDeliveryType
   fullName: CRMScript.NetServer.NSDeliveryType
   type: Class
-  summary: 
+  summary: "\nThe built-in delivery types list. Used by the SuperOffice Quote Connector in quote versions.\n"
   example: 
 - uid: CRMScript.NetServer.NSDeliveryType.#ctor
   commentId: M:CRMScript.NetServer.NSDeliveryType.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSDeliveryType.#ctor
   fullName: CRMScript.NetServer.NSDeliveryType.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSDeliveryType class.\n"
   remarks: 
   syntax: 
     content: NSDeliveryType
