--- a/docs/api-reference/CRMScript.NetServer.NSDepartment.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDepartment.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSDepartment
   fullName: CRMScript.NetServer.NSDepartment
   type: Class
-  summary: 
+  summary: "\nAlso known as User Group."
   example: 
 - uid: CRMScript.NetServer.NSDepartment.#ctor
   commentId: M:CRMScript.NetServer.NSDepartment.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSDepartment.#ctor
   fullName: CRMScript.NetServer.NSDepartment.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSDepartment class.\n"
   remarks: 
   syntax: 
     content: NSDepartment
