--- a/docs/api-reference/CRMScript.NetServer.NSDiaryViewEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDiaryViewEntity.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSDiaryViewEntity
   fullName: CRMScript.NetServer.NSDiaryViewEntity
   type: Class
-  summary: 
+  summary: "\nThe DiaryView Service. The service implements all services working with the DiaryView object.\n"
   example: 
 - uid: CRMScript.NetServer.NSDiaryViewEntity.#ctor
   commentId: M:CRMScript.NetServer.NSDiaryViewEntity.#ctor
@@ -39,7 +39,7 @@ items:
   nameWithType: NSDiaryViewEntity.#ctor
   fullName: CRMScript.NetServer.NSDiaryViewEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSDiaryViewEntity class.\n"
   remarks: 
   syntax: 
     content: NSDiaryViewEntity
@@ -214,7 +214,7 @@ items:
   nameWithType: NSDiaryViewEntity.SetAssociateList(NSSelectableMDOListItem[])
   fullName: CRMScript.NetServer.NSDiaryViewEntity.SetAssociateList(NSSelectableMDOListItem[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAssociateList(NSSelectableMDOListItem[] associateList)
