--- a/docs/api-reference/CRMScript.NetServer.NSDocument.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocument.yml
@@ -47,7 +47,7 @@ items:
   nameWithType: NSDocument
   fullName: CRMScript.NetServer.NSDocument
   type: Class
-  summary: 
+  summary: "\nCarrier object for Document.\n"
   example: 
 - uid: CRMScript.NetServer.NSDocument.#ctor
   commentId: M:CRMScript.NetServer.NSDocument.#ctor
@@ -59,7 +59,7 @@ items:
   nameWithType: NSDocument.#ctor
   fullName: CRMScript.NetServer.NSDocument.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSDocument class.\n"
   remarks: 
   syntax: 
     content: NSDocument
@@ -586,7 +586,7 @@ items:
   nameWithType: NSDocument.SetDocumentTemplate(String)
   fullName: CRMScript.NetServer.NSDocument.SetDocumentTemplate(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDocumentTemplate(String documentTemplate)
