--- a/docs/api-reference/CRMScript.NetServer.NSDocumentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentEntity.yml
@@ -79,7 +79,7 @@ items:
   nameWithType: NSDocumentEntity
   fullName: CRMScript.NetServer.NSDocumentEntity
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSDocumentEntity.#ctor
   commentId: M:CRMScript.NetServer.NSDocumentEntity.#ctor
@@ -91,7 +91,7 @@ items:
   nameWithType: NSDocumentEntity.#ctor
   fullName: CRMScript.NetServer.NSDocumentEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSDocumentEntity class.\n"
   remarks: 
   syntax: 
     content: NSDocumentEntity
@@ -1155,8 +1155,8 @@ items:
   nameWithType: NSDocumentEntity.SetLockSemantics(Integer)
   fullName: CRMScript.NetServer.NSDocumentEntity.SetLockSemantics(Integer)
   type: Method
-  summary: 
-  remarks: ""
+  summary: # TODO
+  remarks: 
   syntax: 
     content: Void SetLockSemantics(Integer lockSemantics)
     parameters:
