--- a/docs/api-reference/CRMScript.NetServer.NSDocumentPreview.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentPreview.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSDocumentPreview
   fullName: CRMScript.NetServer.NSDocumentPreview
   type: Class
-  summary: 
+  summary: "\nDocument data intended for preview purposes. Carrier object for DocumentPreview.\n"
   example: 
 - uid: CRMScript.NetServer.NSDocumentPreview.#ctor
   commentId: M:CRMScript.NetServer.NSDocumentPreview.#ctor
@@ -31,7 +31,7 @@ items:
   nameWithType: NSDocumentPreview.#ctor
   fullName: CRMScript.NetServer.NSDocumentPreview.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSDocumentPreview class.\n"
   remarks: 
   syntax: 
     content: NSDocumentPreview
