--- a/docs/api-reference/CRMScript.NetServer.NSDocumentTemplateEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentTemplateEntity.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSDocumentTemplateEntity.#ctor
   - CRMScript.NetServer.NSDocumentTemplateEntity.GetAutoeventId()
   - CRMScript.NetServer.NSDocumentTemplateEntity.GetDefaultOref()
   - CRMScript.NetServer.NSDocumentTemplateEntity.GetDeleted()
@@ -31,7 +32,6 @@ items:
   - CRMScript.NetServer.NSDocumentTemplateEntity.GetSenderEmailMode()
   - CRMScript.NetServer.NSDocumentTemplateEntity.GetShowCurrents()
   - CRMScript.NetServer.NSDocumentTemplateEntity.GetTooltip()
-  - CRMScript.NetServer.NSDocumentTemplateEntity.#ctor
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetAutoeventId(Integer)
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetDefaultOref(String)
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetDeleted(Bool)
@@ -61,7 +61,22 @@ items:
   nameWithType: NSDocumentTemplateEntity
   fullName: CRMScript.NetServer.NSDocumentTemplateEntity
   type: Class
-  summary: 
+  summary: "\nThe template a document is based on is stored in the SO\_arc\\template folder on the server. This will return the name as displayed in the GUI, and not the physical document name, of the template the document object is based on.\n"
+  example: 
+- uid: CRMScript.NetServer.NSDocumentTemplateEntity.#ctor
+  commentId: M:CRMScript.NetServer.NSDocumentTemplateEntity.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSDocumentTemplateEntity
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSDocumentTemplateEntity.#ctor
+  fullName: CRMScript.NetServer.NSDocumentTemplateEntity.#ctor
+  type: Constructor
+  summary: "\nInitializes a new instance of the NSDocumentTemplateEntity class.\n"
+  remarks: 
+  syntax: 
+    content: NSDocumentTemplateEntity
   example: 
 - uid: CRMScript.NetServer.NSDocumentTemplateEntity.GetAutoeventId()
   commentId: M:CRMScript.NetServer.NSDocumentTemplateEntity.GetAutoeventId()
@@ -563,21 +578,6 @@ items:
       description:
   example: 
   - "\n<pre><code>NSDocumentTemplateEntity thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSDocumentTemplateEntity.#ctor
-  commentId: M:CRMScript.NetServer.NSDocumentTemplateEntity.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSDocumentTemplateEntity
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSDocumentTemplateEntity.#ctor
-  fullName: CRMScript.NetServer.NSDocumentTemplateEntity.#ctor
-  type: Constructor
-  summary: 
-  remarks: 
-  syntax: 
-    content: NSDocumentTemplateEntity
-  example: 
 - uid: CRMScript.NetServer.NSDocumentTemplateEntity.SetAutoeventId(Integer)
   commentId: M:CRMScript.NetServer.NSDocumentTemplateEntity.SetAutoeventId(Integer)
   id: 'SetAutoeventId(Integer)'
