--- a/docs/api-reference/CRMScript.NetServer.NSDuplicateEntry.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDuplicateEntry.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSDuplicateEntry
   fullName: CRMScript.NetServer.NSDuplicateEntry
   type: Class
-  summary: 
+  summary: "\nCarrier object for DuplicateEntry.\n"
   example: 
 - uid: CRMScript.NetServer.NSDuplicateEntry.#ctor
   commentId: M:CRMScript.NetServer.NSDuplicateEntry.#ctor
@@ -33,7 +33,7 @@ items:
   nameWithType: NSDuplicateEntry.#ctor
   fullName: CRMScript.NetServer.NSDuplicateEntry.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSDuplicateEntry class.\n"
   remarks: 
   syntax: 
     content: NSDuplicateEntry
