--- a/docs/api-reference/CRMScript.NetServer.NSDuplicateRule.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDuplicateRule.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSDuplicateRule
   fullName: CRMScript.NetServer.NSDuplicateRule
   type: Class
-  summary: 
+  summary: "\nCarrier object for DuplicateRule.\n"
   example: 
 - uid: CRMScript.NetServer.NSDuplicateRule.#ctor
   commentId: M:CRMScript.NetServer.NSDuplicateRule.#ctor
@@ -31,7 +31,7 @@ items:
   nameWithType: NSDuplicateRule.#ctor
   fullName: CRMScript.NetServer.NSDuplicateRule.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSDuplicateRule class.\n"
   remarks: 
   syntax: 
     content: NSDuplicateRule
