--- a/docs/api-reference/CRMScript.NetServer.NSEMailConnectionInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEMailConnectionInfo.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSEMailConnectionInfo
   fullName: CRMScript.NetServer.NSEMailConnectionInfo
   type: Class
-  summary: 
+  summary: "\nAll information needed to connect to a mail server.\n"
   example: 
 - uid: CRMScript.NetServer.NSEMailConnectionInfo.#ctor
   commentId: M:CRMScript.NetServer.NSEMailConnectionInfo.#ctor
@@ -33,7 +33,7 @@ items:
   nameWithType: NSEMailConnectionInfo.#ctor
   fullName: CRMScript.NetServer.NSEMailConnectionInfo.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSEMailConnectionInfo class.\n"
   remarks: 
   syntax: 
     content: NSEMailConnectionInfo
