--- a/docs/api-reference/CRMScript.NetServer.NSEntityElement.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEntityElement.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSEntityElement
   fullName: CRMScript.NetServer.NSEntityElement
   type: Class
-  summary: 
+  summary: "\nGeneric carrier object for entity elements such as Phone, EntityElement, Url. These elements do not have id and rank. These values are changed on each save, and should not be depended on. When used in a list or array the rank is the ascending list order. Carrier object for EntityElement.\n"
   example: 
 - uid: CRMScript.NetServer.NSEntityElement.#ctor
   commentId: M:CRMScript.NetServer.NSEntityElement.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSEntityElement.#ctor
   fullName: CRMScript.NetServer.NSEntityElement.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSEntityElement class.\n"
   remarks: 
   syntax: 
     content: NSEntityElement
@@ -44,7 +44,7 @@ items:
   nameWithType: NSEntityElement.GetDescription()
   fullName: CRMScript.NetServer.NSEntityElement.GetDescription()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDescription()
@@ -62,7 +62,7 @@ items:
   nameWithType: NSEntityElement.GetStrippedValue()
   fullName: CRMScript.NetServer.NSEntityElement.GetStrippedValue()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetStrippedValue()
@@ -80,7 +80,7 @@ items:
   nameWithType: NSEntityElement.GetValue()
   fullName: CRMScript.NetServer.NSEntityElement.GetValue()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetValue()
@@ -98,7 +98,7 @@ items:
   nameWithType: NSEntityElement.SetDescription(String)
   fullName: CRMScript.NetServer.NSEntityElement.SetDescription(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
@@ -119,7 +119,7 @@ items:
   nameWithType: NSEntityElement.SetStrippedValue(String)
   fullName: CRMScript.NetServer.NSEntityElement.SetStrippedValue(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetStrippedValue(String value)
@@ -140,7 +140,7 @@ items:
   nameWithType: NSEntityElement.SetValue(String)
   fullName: CRMScript.NetServer.NSEntityElement.SetValue(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetValue(String value)
