--- a/docs/api-reference/CRMScript.NetServer.NSEntityName.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEntityName.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSEntityName
   fullName: CRMScript.NetServer.NSEntityName
   type: Class
-  summary: 
+  summary: "\nCarrier object for EntityName.\n"
   example: 
 - uid: CRMScript.NetServer.NSEntityName.#ctor
   commentId: M:CRMScript.NetServer.NSEntityName.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSEntityName.#ctor
   fullName: CRMScript.NetServer.NSEntityName.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSEntityName class.\n"
   remarks: 
   syntax: 
     content: NSEntityName
