--- a/docs/api-reference/CRMScript.NetServer.NSEventData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEventData.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSEventData
   fullName: CRMScript.NetServer.NSEventData
   type: Class
-  summary: 
+  summary: "\nData related to event handlers.\n"
   example: 
 - uid: CRMScript.NetServer.NSEventData.#ctor
   commentId: M:CRMScript.NetServer.NSEventData.#ctor
@@ -39,7 +39,7 @@ items:
   nameWithType: NSEventData.#ctor
   fullName: CRMScript.NetServer.NSEventData.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSEventData class.\n"
   remarks: 
   syntax: 
     content: NSEventData
@@ -204,21 +204,6 @@ items:
       description: The type of event we are triggered by. See <xref href=\"CRMScript.NetServer.EventHandlerType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSEventData thing;\nInteger type = thing.GetType();</code></pre>\n"
-- uid: CRMScript.NetServer.NSEventData.#ctor
-  commentId: M:CRMScript.NetServer.NSEventData.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSEventData
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSEventData.#ctor
-  fullName: CRMScript.NetServer.NSEventData.#ctor
-  type: Constructor
-  summary: 
-  remarks: 
-  syntax: 
-    content: NSEventData
-  example: 
 - uid: CRMScript.NetServer.NSEventData.SetBlockExecution(Bool)
   commentId: M:CRMScript.NetServer.NSEventData.SetBlockExecution(Bool)
   id: 'SetBlockExecution(Bool)'
