--- a/docs/api-reference/CRMScript.NetServer.NSExportArchiveResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSExportArchiveResult.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSExportArchiveResult
   fullName: CRMScript.NetServer.NSExportArchiveResult
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSExportArchiveResult.#ctor
   commentId: M:CRMScript.NetServer.NSExportArchiveResult.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSExportArchiveResult.#ctor
   fullName: CRMScript.NetServer.NSExportArchiveResult.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSExportArchiveResult class.\n"
   remarks: 
   syntax: 
     content: NSExportArchiveResult
