--- a/docs/api-reference/CRMScript.NetServer.NSExtAppEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSExtAppEntity.yml
@@ -55,7 +55,7 @@ items:
   nameWithType: NSExtAppEntity
   fullName: CRMScript.NetServer.NSExtAppEntity
   type: Class
-  summary: 
+  summary: "\nContains information on an external application.\n"
   example: 
 - uid: CRMScript.NetServer.NSExtAppEntity.#ctor
   commentId: M:CRMScript.NetServer.NSExtAppEntity.#ctor
@@ -67,7 +67,7 @@ items:
   nameWithType: NSExtAppEntity.#ctor
   fullName: CRMScript.NetServer.NSExtAppEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSExtAppEntity class.\n"
   remarks: 
   syntax: 
     content: NSExtAppEntity
