--- a/docs/api-reference/CRMScript.NetServer.NSExtendedLicenseInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSExtendedLicenseInfo.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSExtendedLicenseInfo
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSExtendedLicenseInfo.#ctor
   commentId: M:CRMScript.NetServer.NSExtendedLicenseInfo.#ctor
@@ -35,7 +35,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.#ctor
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.#ctor
   type: Constructor
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSExtendedLicenseInfo
@@ -170,7 +170,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.SetAccumulatedNextCheckDate(DateTime)
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.SetAccumulatedNextCheckDate(DateTime)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAccumulatedNextCheckDate(DateTime accumulatedNextCheckDate)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.SetCanBeActivated(Bool)
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.SetCanBeActivated(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCanBeActivated(Bool canBeActivated)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.SetCurrent(NSLicenseInfo)
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.SetCurrent(NSLicenseInfo)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCurrent(NSLicenseInfo current)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.SetExtendedModuleLicenses(NSExtendedModuleLicense[])
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.SetExtendedModuleLicenses(NSExtendedModuleLicense[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetExtendedModuleLicenses(NSExtendedModuleLicense[] extendedModuleLicenses)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.SetNew(NSLicenseInfo)
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.SetNew(NSLicenseInfo)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetNew(NSLicenseInfo new)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.SetReason(String)
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.SetReason(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetReason(String reason)
