--- a/docs/api-reference/CRMScript.NetServer.NSExtendedModuleLicense.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSExtendedModuleLicense.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSExtendedModuleLicense
   fullName: CRMScript.NetServer.NSExtendedModuleLicense
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSExtendedModuleLicense.#ctor
   commentId: M:CRMScript.NetServer.NSExtendedModuleLicense.#ctor
@@ -39,7 +39,7 @@ items:
   nameWithType: NSExtendedModuleLicense.#ctor
   fullName: CRMScript.NetServer.NSExtendedModuleLicense.#ctor
   type: Constructor
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSExtendedModuleLicense
@@ -214,7 +214,7 @@ items:
   nameWithType: NSExtendedModuleLicense.SetCurrent(NSModuleLicense)
   fullName: CRMScript.NetServer.NSExtendedModuleLicense.SetCurrent(NSModuleLicense)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCurrent(NSModuleLicense current)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSExtendedModuleLicense.SetNew(NSModuleLicense)
   fullName: CRMScript.NetServer.NSExtendedModuleLicense.SetNew(NSModuleLicense)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetNew(NSModuleLicense new)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSExtendedModuleLicense.SetNumberOfLicensesAdded(Integer)
   fullName: CRMScript.NetServer.NSExtendedModuleLicense.SetNumberOfLicensesAdded(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetNumberOfLicensesAdded(Integer numberOfLicensesAdded)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSExtendedModuleLicense.SetNumberOfLicensesFree(Integer)
   fullName: CRMScript.NetServer.NSExtendedModuleLicense.SetNumberOfLicensesFree(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetNumberOfLicensesFree(Integer numberOfLicensesFree)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSExtendedModuleLicense.SetNumberOfLicensesInUse(Integer)
   fullName: CRMScript.NetServer.NSExtendedModuleLicense.SetNumberOfLicensesInUse(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetNumberOfLicensesInUse(Integer numberOfLicensesInUse)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSExtendedModuleLicense.SetNumberOfLicensesNewFree(Integer)
   fullName: CRMScript.NetServer.NSExtendedModuleLicense.SetNumberOfLicensesNewFree(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetNumberOfLicensesNewFree(Integer numberOfLicensesNewFree)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSExtendedModuleLicense.SetNumberOfLicensesNewTotal(Integer)
   fullName: CRMScript.NetServer.NSExtendedModuleLicense.SetNumberOfLicensesNewTotal(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetNumberOfLicensesNewTotal(Integer numberOfLicensesNewTotal)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSExtendedModuleLicense.SetNumberOfLicensesTotal(Integer)
   fullName: CRMScript.NetServer.NSExtendedModuleLicense.SetNumberOfLicensesTotal(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetNumberOfLicensesTotal(Integer numberOfLicensesTotal)
