--- a/docs/api-reference/CRMScript.NetServer.NSFavourite.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFavourite.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSFavourite
   fullName: CRMScript.NetServer.NSFavourite
   type: Class
-  summary: 
+  summary: "\nFavourite carrier.\n"
   example: 
 - uid: CRMScript.NetServer.NSFavourite.#ctor
   commentId: M:CRMScript.NetServer.NSFavourite.#ctor
@@ -33,7 +33,7 @@ items:
   nameWithType: NSFavourite.#ctor
   fullName: CRMScript.NetServer.NSFavourite.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFavourite class.\n"
   remarks: 
   syntax: 
     content: NSFavourite
