--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoAttachment.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoAttachment.yml
@@ -13,7 +13,7 @@ items:
   nameWithType: NSFieldInfoAttachment
   fullName: CRMScript.NetServer.NSFieldInfoAttachment
   type: Class
-  summary: 
+  summary: "\nAttachment custom database field.\n"
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoAttachment.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoAttachment.#ctor
@@ -25,7 +25,7 @@ items:
   nameWithType: NSFieldInfoAttachment.#ctor
   fullName: CRMScript.NetServer.NSFieldInfoAttachment.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFieldInfoAttachment class.\n"
   remarks: 
   syntax: 
     content: NSFieldInfoAttachment
