--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoDate.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoDate.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSFieldInfoDate
   fullName: CRMScript.NetServer.NSFieldInfoDate
   type: Class
-  summary: 
+  summary: "\nDate custom database field. Time component is ignored.\n"
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoDate.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoDate.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSFieldInfoDate.#ctor
   fullName: CRMScript.NetServer.NSFieldInfoDate.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFieldInfoDate class.\n"
   remarks: 
   syntax: 
     content: NSFieldInfoDate
