--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoDateTime.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoDateTime.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSFieldInfoDateTime
   fullName: CRMScript.NetServer.NSFieldInfoDateTime
   type: Class
-  summary: 
+  summary: "\nDate + time custom database field.\n"
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoDateTime.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoDateTime.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSFieldInfoDateTime.#ctor
   fullName: CRMScript.NetServer.NSFieldInfoDateTime.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFieldInfoDateTime class.\n"
   remarks: 
   syntax: 
     content: NSFieldInfoDateTime
