--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoDecimal.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoDecimal.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSFieldInfoDecimal
   fullName: CRMScript.NetServer.NSFieldInfoDecimal
   type: Class
-  summary: 
+  summary: "\nDecimal (double precision) custom database field.\n"
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoDecimal.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoDecimal.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSFieldInfoDecimal.#ctor
   fullName: CRMScript.NetServer.NSFieldInfoDecimal.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFieldInfoDecimal class.\n"
   remarks: 
   syntax: 
     content: NSFieldInfoDecimal
