--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoDynamicLink.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoDynamicLink.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSFieldInfoDynamicLink
   fullName: CRMScript.NetServer.NSFieldInfoDynamicLink
   type: Class
-  summary: 
+  summary: "\nDynamic Link custom database field.\n"
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoDynamicLink.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoDynamicLink.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSFieldInfoDynamicLink.#ctor
   fullName: CRMScript.NetServer.NSFieldInfoDynamicLink.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFieldInfoDynamicLink class.\n"
   remarks: 
   syntax: 
     content: NSFieldInfoDynamicLink
