--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoInt.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoInt.yml
@@ -13,7 +13,7 @@ items:
   nameWithType: NSFieldInfoInt
   fullName: CRMScript.NetServer.NSFieldInfoInt
   type: Class
-  summary: 
+  summary: "\nInteger custom database field.\n"
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoInt.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoInt.#ctor
@@ -25,7 +25,7 @@ items:
   nameWithType: NSFieldInfoInt.#ctor
   fullName: CRMScript.NetServer.NSFieldInfoInt.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFieldInfoInt class.\n"
   remarks: 
   syntax: 
     content: NSFieldInfoInt
