--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoListText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoListText.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSFieldInfoListText
   fullName: CRMScript.NetServer.NSFieldInfoListText
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoListText.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoListText.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSFieldInfoListText.#ctor
   fullName: CRMScript.NetServer.NSFieldInfoListText.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFieldInfoListText class.\n"
   remarks: 
   syntax: 
     content: NSFieldInfoListText
