--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoLongText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoLongText.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSFieldInfoLongText
   fullName: CRMScript.NetServer.NSFieldInfoLongText
   type: Class
-  summary: 
+  summary: "\nLong Text custom database field.\n"
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoLongText.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoLongText.#ctor
@@ -33,7 +33,7 @@ items:
   nameWithType: NSFieldInfoLongText.#ctor
   fullName: CRMScript.NetServer.NSFieldInfoLongText.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFieldInfoLongText class.\n"
   remarks: 
   syntax: 
     content: NSFieldInfoLongText
