--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoMdoList.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoMdoList.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSFieldInfoMdoList
   fullName: CRMScript.NetServer.NSFieldInfoMdoList
   type: Class
-  summary: 
+  summary: "\nMDO List custom database field.\n"
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoMdoList.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoMdoList.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSFieldInfoMdoList.#ctor
   fullName: CRMScript.NetServer.NSFieldInfoMdoList.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFieldInfoMdoList class.\n"
   remarks: 
   syntax: 
     content: NSFieldInfoMdoList
