--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoRelation.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoRelation.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSFieldInfoRelation
   fullName: CRMScript.NetServer.NSFieldInfoRelation
   type: Class
-  summary: 
+  summary: "\nRelation to other table database field.\n"
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoRelation.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoRelation.#ctor
@@ -33,7 +33,7 @@ items:
   nameWithType: NSFieldInfoRelation.#ctor
   fullName: CRMScript.NetServer.NSFieldInfoRelation.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFieldInfoRelation class.\n"
   remarks: 
   syntax: 
     content: NSFieldInfoRelation
