--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoShortText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoShortText.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSFieldInfoShortText
   fullName: CRMScript.NetServer.NSFieldInfoShortText
   type: Class
-  summary: 
+  summary: "\nShort text string custom database field.\n"
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoShortText.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoShortText.#ctor
@@ -33,7 +33,7 @@ items:
   nameWithType: NSFieldInfoShortText.#ctor
   fullName: CRMScript.NetServer.NSFieldInfoShortText.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFieldInfoShortText class.\n"
   remarks: 
   syntax: 
     content: NSFieldInfoShortText
