--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoTime.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoTime.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSFieldInfoTime
   fullName: CRMScript.NetServer.NSFieldInfoTime
   type: Class
-  summary: 
+  summary: "\nTime custom database field. Date value is ignored.\n"
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoTime.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoTime.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSFieldInfoTime.#ctor
   fullName: CRMScript.NetServer.NSFieldInfoTime.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFieldInfoTime class.\n"
   remarks: 
   syntax: 
     content: NSFieldInfoTime
