--- a/docs/api-reference/CRMScript.NetServer.NSFieldMetadata.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldMetadata.yml
@@ -31,7 +31,7 @@ items:
   nameWithType: NSFieldMetadata
   fullName: CRMScript.NetServer.NSFieldMetadata
   type: Class
-  summary: 
+  summary: "\nUsed to populate the Admin configuration dialog for a connection. The call to the ERP Connector’s GetConfigurationFields method returns a list of fields and field types. The Admin client builds a dialog with these fields.\n"
   example: 
 - uid: CRMScript.NetServer.NSFieldMetadata.#ctor
   commentId: M:CRMScript.NetServer.NSFieldMetadata.#ctor
@@ -43,7 +43,7 @@ items:
   nameWithType: NSFieldMetadata.#ctor
   fullName: CRMScript.NetServer.NSFieldMetadata.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFieldMetadata class.\n"
   remarks: 
   syntax: 
     content: NSFieldMetadata
