--- a/docs/api-reference/CRMScript.NetServer.NSFieldProperty.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldProperty.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSFieldProperty
   fullName: CRMScript.NetServer.NSFieldProperty
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSFieldProperty.#ctor
   commentId: M:CRMScript.NetServer.NSFieldProperty.#ctor
@@ -33,7 +33,7 @@ items:
   nameWithType: NSFieldProperty.#ctor
   fullName: CRMScript.NetServer.NSFieldProperty.#ctor
   type: Constructor
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSFieldProperty
@@ -48,7 +48,7 @@ items:
   nameWithType: NSFieldProperty.GetFieldLength()
   fullName: CRMScript.NetServer.NSFieldProperty.GetFieldLength()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetFieldLength()
@@ -67,7 +67,7 @@ items:
   nameWithType: NSFieldProperty.GetFieldRight()
   fullName: CRMScript.NetServer.NSFieldProperty.GetFieldRight()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSFieldRight GetFieldRight()
@@ -86,7 +86,7 @@ items:
   nameWithType: NSFieldProperty.GetFieldType()
   fullName: CRMScript.NetServer.NSFieldProperty.GetFieldType()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetFieldType()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSFieldProperty.GetLength()
   fullName: CRMScript.NetServer.NSFieldProperty.GetLength()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetLength()
@@ -122,7 +122,7 @@ items:
   nameWithType: NSFieldProperty.GetType()
   fullName: CRMScript.NetServer.NSFieldProperty.GetType()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetType()
@@ -141,7 +141,7 @@ items:
   nameWithType: NSFieldProperty.SetFieldLength(Integer)
   fullName: CRMScript.NetServer.NSFieldProperty.SetFieldLength(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFieldLength(Integer length)
@@ -162,7 +162,7 @@ items:
   nameWithType: NSFieldProperty.SetFieldRight(NSFieldRight)
   fullName: CRMScript.NetServer.NSFieldProperty.SetFieldRight(NSFieldRight)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFieldRight(NSFieldRight fieldRight)
@@ -183,7 +183,7 @@ items:
   nameWithType: NSFieldProperty.SetFieldType(String)
   fullName: CRMScript.NetServer.NSFieldProperty.SetFieldType(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFieldType(String type)
@@ -204,7 +204,7 @@ items:
   nameWithType: NSFieldProperty.SetLength(Integer)
   fullName: CRMScript.NetServer.NSFieldProperty.SetLength(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLength(Integer length)
@@ -225,7 +225,7 @@ items:
   nameWithType: NSFieldProperty.SetType(String)
   fullName: CRMScript.NetServer.NSFieldProperty.SetType(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetType(String type)
