--- a/docs/api-reference/CRMScript.NetServer.NSFieldRight.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldRight.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSFieldRight
   fullName: CRMScript.NetServer.NSFieldRight
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSFieldRight.#ctor
   commentId: M:CRMScript.NetServer.NSFieldRight.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSFieldRight.#ctor
   fullName: CRMScript.NetServer.NSFieldRight.#ctor
   type: Constructor
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSFieldRight
@@ -44,7 +44,7 @@ items:
   nameWithType: NSFieldRight.GetFieldRight()
   fullName: CRMScript.NetServer.NSFieldRight.GetFieldRight()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetFieldRight()
@@ -63,7 +63,7 @@ items:
   nameWithType: NSFieldRight.GetMask()
   fullName: CRMScript.NetServer.NSFieldRight.GetMask()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetMask()
@@ -82,7 +82,7 @@ items:
   nameWithType: NSFieldRight.GetReason()
   fullName: CRMScript.NetServer.NSFieldRight.GetReason()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetReason()
@@ -101,7 +101,7 @@ items:
   nameWithType: NSFieldRight.SetFieldRight(Integer)
   fullName: CRMScript.NetServer.NSFieldRight.SetFieldRight(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFieldRight(Integer fieldRight)
@@ -122,7 +122,7 @@ items:
   nameWithType: NSFieldRight.SetMask(Integer)
   fullName: CRMScript.NetServer.NSFieldRight.SetMask(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetMask(Integer mask)
@@ -143,7 +143,7 @@ items:
   nameWithType: NSFieldRight.SetReason(String)
   fullName: CRMScript.NetServer.NSFieldRight.SetReason(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetReason(String reason)
