--- a/docs/api-reference/CRMScript.NetServer.NSFindResults.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFindResults.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSFindResults
   fullName: CRMScript.NetServer.NSFindResults
   type: Class
-  summary: 
+  summary: "\nResult carrier for the Find operation. It contains a set of column specifications, and a set of row, where each row contains the columns. The row set is the result of carrying out some search operation.\n"
   example: 
 - uid: CRMScript.NetServer.NSFindResults.#ctor
   commentId: M:CRMScript.NetServer.NSFindResults.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSFindResults.#ctor
   fullName: CRMScript.NetServer.NSFindResults.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFindResults class.\n"
   remarks: 
   syntax: 
     content: NSFindResults
