--- a/docs/api-reference/CRMScript.NetServer.NSForeignAppEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSForeignAppEntity.yml
@@ -25,7 +25,7 @@ items:
   nameWithType: NSForeignAppEntity
   fullName: CRMScript.NetServer.NSForeignAppEntity
   type: Class
-  summary: 
+  summary: "\nCarrier object for ForeignAppEntity.n"
   example: 
 - uid: CRMScript.NetServer.NSForeignAppEntity.#ctor
   commentId: M:CRMScript.NetServer.NSForeignAppEntity.#ctor
@@ -37,7 +37,7 @@ items:
   nameWithType: NSForeignAppEntity.#ctor
   fullName: CRMScript.NetServer.NSForeignAppEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSForeignAppEntity class.\n"
   remarks: 
   syntax: 
     content: NSForeignAppEntity
