--- a/docs/api-reference/CRMScript.NetServer.NSForeignDevice.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSForeignDevice.yml
@@ -29,7 +29,7 @@ items:
   nameWithType: NSForeignDevice
   fullName: CRMScript.NetServer.NSForeignDevice
   type: Class
-  summary: 
+  summary: "\nSaves a foreign device belonging to the ForeignDevice and application name specified.\n"
   example: 
 - uid: CRMScript.NetServer.NSForeignDevice.#ctor
   commentId: M:CRMScript.NetServer.NSForeignDevice.#ctor
@@ -41,7 +41,7 @@ items:
   nameWithType: NSForeignDevice.#ctor
   fullName: CRMScript.NetServer.NSForeignDevice.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSForeignDevice class.\n"
   remarks: 
   syntax: 
     content: NSForeignDevice
