--- a/docs/api-reference/CRMScript.NetServer.NSForeignKey.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSForeignKey.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSForeignKey
   fullName: CRMScript.NetServer.NSForeignKey
   type: Class
-  summary: 
+  summary: "\nCarrier object for ForeignKey.\n"
   example: 
 - uid: CRMScript.NetServer.NSForeignKey.#ctor
   commentId: M:CRMScript.NetServer.NSForeignKey.#ctor
@@ -39,7 +39,7 @@ items:
   nameWithType: NSForeignKey.#ctor
   fullName: CRMScript.NetServer.NSForeignKey.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSForeignKey class.\n"
   remarks: 
   syntax: 
     content: NSForeignKey
