--- a/docs/api-reference/CRMScript.NetServer.NSFormEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFormEntity.yml
@@ -55,7 +55,7 @@ items:
   nameWithType: NSFormEntity
   fullName: CRMScript.NetServer.NSFormEntity
   type: Class
-  summary: 
+  summary: "\nDefinition and configuration of a Form.\n"
   example: 
 - uid: CRMScript.NetServer.NSFormEntity.#ctor
   commentId: M:CRMScript.NetServer.NSFormEntity.#ctor
@@ -67,7 +67,7 @@ items:
   nameWithType: NSFormEntity.#ctor
   fullName: CRMScript.NetServer.NSFormEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFormEntity class.\n"
   remarks: 
   syntax: 
     content: NSFormEntity
