--- a/docs/api-reference/CRMScript.NetServer.NSFormSubmissionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFormSubmissionEntity.yml
@@ -31,7 +31,7 @@ items:
   nameWithType: NSFormSubmissionEntity
   fullName: CRMScript.NetServer.NSFormSubmissionEntity
   type: Class
-  summary: 
+  summary: "\nContent of a Form submission.\n"
   example: 
 - uid: CRMScript.NetServer.NSFormSubmissionEntity.#ctor
   commentId: M:CRMScript.NetServer.NSFormSubmissionEntity.#ctor
@@ -43,7 +43,7 @@ items:
   nameWithType: NSFormSubmissionEntity.#ctor
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFormSubmissionEntity class.\n"
   remarks: 
   syntax: 
     content: NSFormSubmissionEntity
