--- a/docs/api-reference/CRMScript.NetServer.NSFreeText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFreeText.yml
@@ -25,7 +25,7 @@ items:
   nameWithType: NSFreeText
   fullName: CRMScript.NetServer.NSFreeText
   type: Class
-  summary: 
+  summary: "\nUsed to manage freetext search.\n"
   example: 
 - uid: CRMScript.NetServer.NSFreeText.#ctor
   commentId: M:CRMScript.NetServer.NSFreeText.#ctor
@@ -37,7 +37,7 @@ items:
   nameWithType: NSFreeText.#ctor
   fullName: CRMScript.NetServer.NSFreeText.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFreeText class.\n"
   remarks: 
   syntax: 
     content: NSFreeText
