--- a/docs/api-reference/CRMScript.NetServer.NSDocumentTemplate.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentTemplate.yml
@@ -33,7 +33,7 @@ items:
   nameWithType: NSDocumentTemplate
   fullName: CRMScript.NetServer.NSDocumentTemplate
   type: Class
-  summary: 
+  summary: "\nThe template a document is based on is stored in the SO\_arc\\template folder on the server. This will return the name as displayed in the GUI, and not the physical document name, of the template the document object is based on.\n"
   example: 
 - uid: CRMScript.NetServer.NSDocumentTemplate.#ctor
   commentId: M:CRMScript.NetServer.NSDocumentTemplate.#ctor
@@ -45,7 +45,7 @@ items:
   nameWithType: NSDocumentTemplate.#ctor
   fullName: CRMScript.NetServer.NSDocumentTemplate.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSDocumentTemplate class.\n"
   remarks: 
   syntax: 
     content: NSDocumentTemplate
