--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoBase.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoBase.yml
@@ -37,7 +37,7 @@ items:
   nameWithType: NSFieldInfoBase
   fullName: CRMScript.NetServer.NSFieldInfoBase
   type: Class
-  summary: 
+  summary: "\nAbstract basic information about database fields. May be custom or user-defined fields. The information can be used to build a user interface.\n"
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoBase.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoBase.#ctor
@@ -49,7 +49,7 @@ items:
   nameWithType: NSFieldInfoBase.#ctor
   fullName: CRMScript.NetServer.NSFieldInfoBase.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFieldInfoBase class.\n"
   remarks: 
   syntax: 
     content: NSFieldInfoBase
