--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoBool.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoBool.yml
@@ -13,7 +13,7 @@ items:
   nameWithType: NSFieldInfoBool
   fullName: CRMScript.NetServer.NSFieldInfoBool
   type: Class
-  summary: 
+  summary: "\nBoolean custom database field. Typically rendered as a checkbox.\n"
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoBool.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoBool.#ctor
@@ -25,7 +25,7 @@ items:
   nameWithType: NSFieldInfoBool.#ctor
   fullName: CRMScript.NetServer.NSFieldInfoBool.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFieldInfoBool class.\n"
   remarks: 
   syntax: 
     content: NSFieldInfoBool
