--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoTimeSpan.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoTimeSpan.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSFieldInfoTimeSpan
   fullName: CRMScript.NetServer.NSFieldInfoTimeSpan
   type: Class
-  summary: 
+  summary: "\nTimespan custom database field. Number of minutes, represented as days/hours/minutes.\n"
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoTimeSpan.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoTimeSpan.#ctor
@@ -31,7 +31,7 @@ items:
   nameWithType: NSFieldInfoTimeSpan.#ctor
   fullName: CRMScript.NetServer.NSFieldInfoTimeSpan.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSFieldInfoTimeSpan class.\n"
   remarks: 
   syntax: 
     content: NSFieldInfoTimeSpan
